fix(gtk): fix alignment issues with nautilus sidebar in gnome v50

--- a/gtk-4.0/gtk.css
+++ b/gtk-4.0/gtk.css
@@ -4108,45 +4108,44 @@ stacksidebar row {
 placessidebar {
   background-color: transparent;
   background-image: linear-gradient(to right, #232831 40px, #2e3440 35px, #2e3440 36px, #2e3440 36px, #2e3440 99%, #2e3440 100%); }
-  placessidebar row {
-    padding: 1px 11px; }
-    placessidebar row.sidebar-row.sidebar-row {
-      margin: 0;
-      border-radius: 0; }
-      placessidebar row.sidebar-row.sidebar-row label {
-        padding-left: 30px; }
-    placessidebar row.sidebar-row:hover {
+  placessidebar row.activatable {
+    padding: 1px 11px;
+    margin: 0;
+    border-radius: 0; }
+    placessidebar row.activatable label {
+      padding-left: 25px; }
+    placessidebar row.activatable:hover {
       background: rgba(0, 0, 0, 0.12);
       color: inherit; }
-    placessidebar row.sidebar-row:selected {
+    placessidebar row.activatable:selected {
       color: #fff;
       background-color: transparent;
       background-image: linear-gradient(to right, rgba(143, 188, 187, 0.7) 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
-      placessidebar row.sidebar-row:selected label {
+      placessidebar row.activatable:selected label {
         color: #8fbcbb; }
-      placessidebar row.sidebar-row:selected:hover {
+      placessidebar row.activatable:selected:hover {
         color: #ffffff;
         background-color: rgba(0, 0, 0, 0.24); }
-        placessidebar row.sidebar-row:selected:hover .sidebar-icon {
+        placessidebar row.activatable:selected:hover .sidebar-icon {
           color: #ffffff; }
-      placessidebar row.sidebar-row:selected:backdrop {
+      placessidebar row.activatable:selected:backdrop {
         color: rgba(0, 0, 0, 0.54);
         background-color: transparent;
-        background-image: linear-gradient(to right, #8fbcbb 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
-        placessidebar row.sidebar-row:selected:backdrop .sidebar-icon {
+        background-image: linear-gradient(to right, rgba(143, 188, 187, 0.6) 40px, rgba(65, 67, 75, 0) 36px, rgba(65, 67, 75, 0) 97%); }
+        placessidebar row.activatable:selected:backdrop .sidebar-icon {
           -gtk-icon-shadow: none; }
-      placessidebar row.sidebar-row:selected .sidebar-icon {
+      placessidebar row.activatable:selected .sidebar-icon {
         -gtk-icon-shadow: 0 1px rgba(255, 255, 255, 0.8);
         color: inherit; }
-    placessidebar row.sidebar-row.sidebar-new-bookmark-row, placessidebar row.sidebar-row.sidebar-new-bookmark-row label, placessidebar row.sidebar-row.sidebar-new-bookmark-row .sidebar-icon {
+    placessidebar row.activatable.sidebar-new-bookmark-row, placessidebar row.activatable.sidebar-new-bookmark-row label, placessidebar row.activatable.sidebar-new-bookmark-row .sidebar-icon {
       color: #ebcb8b; }
-    placessidebar row.sidebar-row:drop(active):not(:disabled) {
+    placessidebar row.activatable:drop(active):not(:disabled) {
       box-shadow: inset 0 1px #a3be8c, inset 0 -1px #a3be8c; }
-      placessidebar row.sidebar-row:drop(active):not(:disabled), placessidebar row.sidebar-row:drop(active):not(:disabled) label, placessidebar row.sidebar-row:drop(active):not(:disabled) image {
+      placessidebar row.activatable:drop(active):not(:disabled), placessidebar row.activatable:drop(active):not(:disabled) label, placessidebar row.activatable:drop(active):not(:disabled) image {
         color: #a3be8c; }
-      placessidebar row.sidebar-row:drop(active):not(:disabled):selected {
+      placessidebar row.activatable:drop(active):not(:disabled):selected {
         background: #a3be8c; }
-        placessidebar row.sidebar-row:drop(active):not(:disabled):selected, placessidebar row.sidebar-row:drop(active):not(:disabled):selected label, placessidebar row.sidebar-row:drop(active):not(:disabled):selected image {
+        placessidebar row.activatable:drop(active):not(:disabled):selected, placessidebar row.activatable:drop(active):not(:disabled):selected label, placessidebar row.activatable:drop(active):not(:disabled):selected image {
           color: #2e3440; }
   placessidebar list {
     background-color: transparent; }
